# sat-img-processing

./: .gitignore  CMakeLists.txt  MASS.hpp  README.md  applyMask2GetWater.cpp  getWater.cpp  main.cpp  processing_MNWI.cpp  visualize.cpp
data/points/: bella_desGagnes.xyz
include/: MASS.hpp  SENTINEL.hpp
script/: get_rimouski_port_files.py
src/: applyMask2GetWater.cpp  depth.cpp  processing_MNWI.cpp  visualize.cpp
